RESOLVED FIXED272066
BBQ has spurious assertion for zero-frame leaf functions
https://bugs.webkit.org/show_bug.cgi?id=272066
Summary BBQ has spurious assertion for zero-frame leaf functions
Justin Michaud
Reported 2024-04-02 18:12:18 PDT
BBQ has spurious assertion for zero-frame leaf functions
Attachments
Justin Michaud
Comment 1 2024-04-02 18:12:28 PDT
Justin Michaud
Comment 2 2024-04-02 18:13:41 PDT
EWS
Comment 3 2024-04-03 14:10:43 PDT
Committed 277029@main (5c78bf00205e): <https://commits.webkit.org/277029@main> Reviewed commits have been landed. Closing PR #26766 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.