BBQ has spurious assertion for zero-frame leaf functions https://bugs.webkit.org/show_bug.cgi?id=272066 rdar://125620937

Reviewed by Yusuke Suzuki.

It's fine for there to be a zero-sized stack check from BBQ.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::parseAndCompileBBQ):

Canonical link: https://commits.webkit.org/277029@main